[gd_scene load_steps=7 format=4 uid="uid://73et73hhv6tp"]

[ext_resource type="Script" uid="uid://kkt4uahd4vr3" path="res://scripts/world/door.gd" id="1_hpvv5"]

[sub_resource type="BoxMesh" id="BoxMesh_hpvv5"]
size = Vector3(2, 2.8, 0.15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uvdjg"]
albedo_color = Color(0, 0.12646407, 0.34507018, 1)
metallic = 0.54
metallic_specular = 0.73
roughness = 0.3

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_hpvv5"]
data = PackedVector3Array(-1, 1.4, 0.074999996, 1, 1.4, 0.074999996, -1, -1.4, 0.074999996, 1, 1.4, 0.074999996, 1, -1.4, 0.074999996, -1, -1.4, 0.074999996, 1, 1.4, -0.074999996, -1, 1.4, -0.074999996, 1, -1.4, -0.074999996, -1, 1.4, -0.074999996, -1, -1.4, -0.074999996, 1, -1.4, -0.074999996, 1, 1.4, 0.074999996, 1, 1.4, -0.074999996, 1, -1.4, 0.074999996, 1, 1.4, -0.074999996, 1, -1.4, -0.074999996, 1, -1.4, 0.074999996, -1, 1.4, -0.074999996, -1, 1.4, 0.074999996, -1, -1.4, -0.074999996, -1, 1.4, 0.074999996, -1, -1.4, 0.074999996, -1, -1.4, -0.074999996, 1, 1.4, 0.074999996, -1, 1.4, 0.074999996, 1, 1.4, -0.074999996, -1, 1.4, 0.074999996, -1, 1.4, -0.074999996, 1, 1.4, -0.074999996, -1, -1.4, 0.074999996, 1, -1.4, 0.074999996, -1, -1.4, -0.074999996, 1, -1.4, 0.074999996, 1, -1.4, -0.074999996, -1, -1.4, -0.074999996)

[sub_resource type="ArrayMesh" id="ArrayMesh_hpvv5"]
_surfaces = [{
"aabb": AABB(-1.25, 0, -0.1, 2.5, 3, 0.2),
"attribute_data": PackedByteArray("AACAPwAAAACtR2E/lYgIPQAAgD8AAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAAAAAK1HYT+ViAg9AACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/AACAPwAAgD+tR2E/gIgIPa1HYT93d3c/AACAPwAAgD+tR2E/d3d3PwAAAAAAAIA/AACAPwAAgD+tR2E/lYgIPa1HYT94d3c/AACAPwAAgD+tR2E/eHd3PwAAAAAAAIA/AACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AACAPwAAgD8AAIA/AAAAAK1HYT+AiAg9AACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AACAPwAAAAAAAAAAAAAAAK1HYT+AiAg9AAAAAAAAAACGwvU9lYgIPa1HYT+ViAg9AAAAAAAAAACGwvU9eHd3P4bC9T2ViAg9AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAgD+tR2E/d3d3P4bC9T13d3c/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAgD+GwvU9d3d3PwAAAAAAAAAAAAAAAAAAgD+tR2E/eHd3P4bC9T14d3c/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAP4bC9T14d3c/AACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AAAAAAAAAACGwvU9gIgIPa1HYT+AiAg9AAAAAAAAAACGwvU9d3d3P4bC9T2AiAg9AACAPwAAAAAAAIA/AACAPwAAAAAAAAAAAACAPwAAAAAAAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAAAAAAAAAAAAgD8AAIA/AAAAAAAAgD8AAAAAAAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAACAPwAAAAAAAIA/AACAPwAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/AAAAAAAAgD8AAAAAAAAAAAAAgD8AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray("AACgvwAAAADNzMy9MDNzv+DMzD3NzMy9AACgvwAAQEDNzMy9AACgvwAAAADNzMy9AACgvwAAQEDNzMy9AACgvwAAAADNzMw9AACgvwAAAADNzMy9AACgPwAAAADNzMy9MDNzv+DMzD3NzMy9AACgvwAAAADNzMy9AACgvwAAAADNzMw9AACgPwAAAADNzMy9AACgvwAAAADNzMw9MDNzv5qZOUDNzMw9MDNzv+DMzD3NzMw9AACgvwAAAADNzMw9MDNzv+DMzD3NzMw9AACgPwAAAADNzMw9AACgvwAAQEDNzMy9MDNzv+DMzD3NzMy9MDNzv5qZOUDNzMy9AACgvwAAQEDNzMy9MDNzv5qZOUDNzMy9AACgPwAAQEDNzMy9AACgvwAAAADNzMw9AACgvwAAQEDNzMy9AACgvwAAQEDNzMw9AACgvwAAAADNzMw9AACgvwAAQEDNzMw9MDNzv5qZOUDNzMw9AACgvwAAQEDNzMy9AACgPwAAQEDNzMw9AACgvwAAQEDNzMw9AACgvwAAQEDNzMw9AACgPwAAQEDNzMw9MDNzv5qZOUDNzMw9AACgPwAAAADNzMy9NjNzP+DMzD3NzMy9MDNzv+DMzD3NzMy9AACgPwAAAADNzMy9NjNzP5qZOUDNzMy9NjNzP+DMzD3NzMy9AACgvwAAAADNzMw9AACgPwAAAADNzMw9AACgPwAAAADNzMy9AACgPwAAAADNzMw9MDNzv+DMzD3NzMw9NjNzP+DMzD3NzMw9AACgPwAAAADNzMy9AACgPwAAAADNzMw9AACgPwAAQEDNzMw9AACgPwAAAADNzMw9NjNzP+DMzD3NzMw9AACgPwAAQEDNzMw9AACgPwAAQEDNzMy9MDNzv5qZOUDNzMy9NjNzP5qZOUDNzMy9AACgvwAAQEDNzMy9AACgPwAAQEDNzMy9AACgPwAAQEDNzMw9AACgPwAAAADNzMy9AACgPwAAQEDNzMy9NjNzP5qZOUDNzMy9AACgPwAAAADNzMy9AACgPwAAQEDNzMw9AACgPwAAQEDNzMy9AACgPwAAQEDNzMw9NjNzP5qZOUDNzMw9MDNzv5qZOUDNzMw9AACgPwAAQEDNzMw9NjNzP+DMzD3NzMw9NjNzP5qZOUDNzMw9MDNzv+DMzD3NzMy9MDNzv+DMzD3NzMw9MDNzv5qZOUDNzMy9MDNzv+DMzD3NzMy9NjNzP+DMzD3NzMy9MDNzv+DMzD3NzMw9MDNzv5qZOUDNzMw9MDNzv5qZOUDNzMy9MDNzv+DMzD3NzMw9MDNzv5qZOUDNzMw9NjNzP5qZOUDNzMw9MDNzv5qZOUDNzMy9NjNzP+DMzD3NzMy9NjNzP+DMzD3NzMw9MDNzv+DMzD3NzMw9NjNzP+DMzD3NzMw9NjNzP+DMzD3NzMy9NjNzP5qZOUDNzMw9NjNzP5qZOUDNzMw9NjNzP5qZOUDNzMy9MDNzv5qZOUDNzMy9NjNzP5qZOUDNzMy9NjNzP5qZOUDNzMw9NjNzP+DMzD3NzMy9/////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//3//////AAD/f/////8AAP9//////wAA/////wAA/z//////AAD/P/////8AAP8/////f/9//n////9//3/+f////3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9/AID///9//38AgP///3//fwCA/3//////////f/////////9/////////////f/9/AID///9//38AgP///3//fwCA/38AAP//////fwAA//////9/AAD//////3//////////f/////////9/////////AAD/f/9/AIAAAP9//38AgAAA/3//fwCA/38AAP//////fwAA//////9/AAD/////AAD/f/9/AIAAAP9//38AgAAA/3//fwCA")
}]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_uvdjg"]
data = PackedVector3Array(-1.25, 0, -0.099999994, -0.95, 0.099999994, -0.099999994, -1.25, 3, -0.099999994, -1.25, 0, -0.099999994, -1.25, 3, -0.099999994, -1.25, 0, 0.099999994, -1.25, 0, -0.099999994, 1.25, 0, -0.099999994, -0.95, 0.099999994, -0.099999994, -1.25, 0, -0.099999994, -1.25, 0, 0.099999994, 1.25, 0, -0.099999994, -1.25, 0, 0.099999994, -0.95, 2.8999999, 0.099999994, -0.95, 0.099999994, 0.099999994, -1.25, 0, 0.099999994, -0.95, 0.099999994, 0.099999994, 1.25, 0, 0.099999994, -1.25, 3, -0.099999994, -0.95, 0.099999994, -0.099999994, -0.95, 2.8999999, -0.099999994, -1.25, 3, -0.099999994, -0.95, 2.8999999, -0.099999994, 1.25, 3, -0.099999994, -1.25, 0, 0.099999994, -1.25, 3, -0.099999994, -1.25, 3, 0.099999994, -1.25, 0, 0.099999994, -1.25, 3, 0.099999994, -0.95, 2.8999999, 0.099999994, -1.25, 3, -0.099999994, 1.25, 3, 0.099999994, -1.25, 3, 0.099999994, -1.25, 3, 0.099999994, 1.25, 3, 0.099999994, -0.95, 2.8999999, 0.099999994, 1.25, 0, -0.099999994, 0.95, 0.099999994, -0.099999994, -0.95, 0.099999994, -0.099999994, 1.25, 0, -0.099999994, 0.95, 2.8999999, -0.099999994, 0.95, 0.099999994, -0.099999994, -1.25, 0, 0.099999994, 1.25, 0, 0.099999994, 1.25, 0, -0.099999994, 1.25, 0, 0.099999994, -0.95, 0.099999994, 0.099999994, 0.95, 0.099999994, 0.099999994, 1.25, 0, -0.099999994, 1.25, 0, 0.099999994, 1.25, 3, 0.099999994, 1.25, 0, 0.099999994, 0.95, 0.099999994, 0.099999994, 1.25, 3, 0.099999994, 1.25, 3, -0.099999994, -0.95, 2.8999999, -0.099999994, 0.95, 2.8999999, -0.099999994, -1.25, 3, -0.099999994, 1.25, 3, -0.099999994, 1.25, 3, 0.099999994, 1.25, 0, -0.099999994, 1.25, 3, -0.099999994, 0.95, 2.8999999, -0.099999994, 1.25, 0, -0.099999994, 1.25, 3, 0.099999994, 1.25, 3, -0.099999994, 1.25, 3, 0.099999994, 0.95, 2.8999999, 0.099999994, -0.95, 2.8999999, 0.099999994, 1.25, 3, 0.099999994, 0.95, 0.099999994, 0.099999994, 0.95, 2.8999999, 0.099999994, -0.95, 0.099999994, -0.099999994, -0.95, 0.099999994, 0.099999994, -0.95, 2.8999999, -0.099999994, -0.95, 0.099999994, -0.099999994, 0.95, 0.099999994, -0.099999994, -0.95, 0.099999994, 0.099999994, -0.95, 2.8999999, 0.099999994, -0.95, 2.8999999, -0.099999994, -0.95, 0.099999994, 0.099999994, -0.95, 2.8999999, 0.099999994, 0.95, 2.8999999, 0.099999994, -0.95, 2.8999999, -0.099999994, 0.95, 0.099999994, -0.099999994, 0.95, 0.099999994, 0.099999994, -0.95, 0.099999994, 0.099999994, 0.95, 0.099999994, 0.099999994, 0.95, 0.099999994, -0.099999994, 0.95, 2.8999999, 0.099999994, 0.95, 2.8999999, 0.099999994, 0.95, 2.8999999, -0.099999994, -0.95, 2.8999999, -0.099999994, 0.95, 2.8999999, -0.099999994, 0.95, 2.8999999, 0.099999994, 0.95, 0.099999994, -0.099999994)

[node name="Door" type="Node3D"]
script = ExtResource("1_hpvv5")

[node name="DoorPanel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("BoxMesh_hpvv5")
surface_material_override/0 = SubResource("StandardMaterial3D_uvdjg")

[node name="StaticBody3D" type="StaticBody3D" parent="DoorPanel"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorPanel/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_hpvv5")

[node name="StatusLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 0.3)
light_color = Color(1, 0, 0, 1)

[node name="StatusLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6, 0.2)
text = "LOCKED
"

[node name="DoorFrame" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_hpvv5")

[node name="StaticBody3D" type="StaticBody3D" parent="DoorFrame"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorFrame/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_uvdjg")
